이미지를 올릴 시, 타임 아웃 설정으로 연결유지 기능 추가